--- a/webdev/test-site/styles/style.css
+++ b/webdev/test-site/styles/style.css
@@ -1,37 +1,37 @@
 html {
     /* px 表示 “像素（pixels）”: 基础字号为 10 像素 */
-    font-size: 10px;
+    font-size: 10px;      /*设置字号*/
     /* Google fonts 输出的 CSS */
-    font-family: 'Kirang Haerang', cursive;
+    font-family: 'Kirang Haerang', cursive;  /*设置字体*/
     background-color: #00539f;
   }
 
   body {
-    width: 600px;
-    margin: 0 auto;
-    background-color: #FF9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
+    width: 600px;   /*设置元素的宽度*/
+    margin: 0 auto;  /*设置外边距，第一个值代表上方和下放，第二个值代表左边和右边；auto是水平方向上左右对称*/
+    background-color: #FF9500;  /*指定元素的背景颜色*/
+    padding: 0 20px 20px 20px;  /*设置内边距，围绕元素的外部的空间；值以上、右、下、左的顺序排列*/
+    border: 5px solid black;    /*设置边框，紧接着内边距的线；这里是5像素的黑色实线边框*/
 }
 
   h1 {
-    font-size: 60px;
-    text-align: center;
-    margin: 0;
-    padding: 20px 0;
-    color: #00539F;
-    text-shadow: 3px 3px 1px black;
+    font-size: 60px;   /*设置字号*/
+    text-align: center;  /*设置元素居中显示*/
+    margin: 0;      /*设置外边距*/
+    padding: 20px 0;   /*设置内边距*/
+    color: #00539F;    /*元素内容的颜色*/
+    text-shadow: 3px 3px 1px black;  /*为元素内的文本设置阴影*/
   }
   
   p, li {
-    font-size: 16px;
+    font-size: 16px;   /*设置字号*/
     /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */
-    line-height: 2;
-    letter-spacing: 1px;
+    line-height: 2;   /*设置行高*/
+    letter-spacing: 1px;  /*设置字间距*/
   }
 
   img {
-      width: 300px;
-      display: block;
-      margin: 0 auto;
+      width: 300px;   /*设置元素的宽度*/
+      display: block;  /*设置元素的显示模式*/
+      margin: 0 auto;  /*设置外边距*/
   }
