--- a/webdev/test-site/styles/style.css
+++ b/webdev/test-site/styles/style.css
@@ -20,7 +20,7 @@ html {
     margin: 0;      /*设置外边距*/
     padding: 20px 0;   /*设置内边距*/
     color: #00539F;    /*元素内容的颜色*/
-    text-shadow: 3px 3px 1px black;  /*为元素内的文本设置阴影*/
+    text-shadow: 3px 3px 1px black;  /*为元素内的文本设置阴影；第一个值水平偏移值，第二个值垂直偏移值；第三个值阴影的模糊半径；第四个值阴影的基色*/
   }
   
   p, li {
